# AdapterExample

./: CMakeLists.txt  README.md
include/: OldPrinter.h  Printer.h  PrinterAdapter.h
src/: OldPrinter.cpp  PrinterAdapter.cpp
tests/: CMakeLists.txt  test_main.cpp
